# ghplus

./: .gitignore  README.md  ghp.py  ghplus.py  install.sh  pyproject.toml  requirements.txt  uninstall.sh
src/: ghp.py
src/ghsettings/: __init__.py  __main__.py  ghsettings.py
src/ghsettings/implementations/config/: json_config.py
src/ghsettings/implementations/settings/: repo.py
src/ghsettings/interfaces/: repo_settings.py
src/implementations/config/: json_config.py
src/implementations/settings/: repo.py
src/interfaces/: config.py
